package ase.project.domain.action;

public interface InputProvider {

    int readInt();

    String readString();

    boolean readBoolean();
}
